--- a/m4d/m4d.csproj
+++ b/m4d/m4d.csproj
@@ -32,6 +32,7 @@
     </NuGetPackageImportStamp>
     <TargetFrameworkProfile />
     <ApplicationInsightsResourceId>/subscriptions/e248126d-ff1e-421d-8fa2-fecff3a7a402/resourcegroups/Default-Web-WestUS/providers/microsoft.insights/components/m4d</ApplicationInsightsResourceId>
+    <Use64BitIISExpress />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
