Move to using webcompiler rather than BundleManager for less compilation.

--- a/m4d/Web.config
+++ b/m4d/Web.config
@@ -260,6 +260,10 @@ Sample binding in application.config for iisexpress
         <assemblyIdentity name="System.Diagnostics.DiagnosticSource" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.2.1" newVersion="4.0.2.1" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <entityFramework>
@@ -380,9 +384,6 @@ Sample binding in application.config for iisexpress
 					<add fileExtension=".js" assetTypeCode="JavaScript" />
 				</fileExtensions>
 			</js></core>
-    <less useNativeMinification="false" ieCompat="true" strictMath="false" strictUnits="false" dumpLineNumbers="None" javascriptEnabled="true">
-      <jsEngine name="MsieJsEngine" />
-    </less>
   </bundleTransformer>
   <system.codedom>
     <compilers>
