--- a/m4d/m4d.csproj
+++ b/m4d/m4d.csproj
@@ -870,6 +870,22 @@
     <Content Include="Content\teal-bootstrap.css" />
     <Content Include="Content\tempo-50.png" />
     <Content Include="Content\helpmap.txt" />
+    <Content Include="Content\themes\admin-theme.css" />
+    <Content Include="Content\themes\admin-theme.min.css">
+      <DependentUpon>admin-theme.css</DependentUpon>
+    </Content>
+    <Content Include="Content\themes\blog-theme.css" />
+    <Content Include="Content\themes\blog-theme.min.css">
+      <DependentUpon>blog-theme.css</DependentUpon>
+    </Content>
+    <Content Include="Content\themes\music-theme.css" />
+    <Content Include="Content\themes\music-theme.min.css">
+      <DependentUpon>music-theme.css</DependentUpon>
+    </Content>
+    <Content Include="Content\themes\tools-theme.css" />
+    <Content Include="Content\themes\tools-theme.min.css">
+      <DependentUpon>tools-theme.css</DependentUpon>
+    </Content>
     <Content Include="Content\thermometer-0.png" />
     <Content Include="Content\thermometer-1.png" />
     <Content Include="Content\thermometer-2.png" />
@@ -1014,6 +1030,10 @@
     <Content Include="Scripts\chosen.jquery.js" />
     <Content Include="Scripts\counter.js" />
     <Content Include="Scripts\edit.js" />
+    <None Include="compilerconfig.json" />
+    <None Include="compilerconfig.json.defaults">
+      <DependentUpon>compilerconfig.json</DependentUpon>
+    </None>
     <None Include="Properties\PublishProfiles\m4d - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\music4dance.pubxml" />
     <Content Include="Scripts\editdance.js" />
