--- a/m4d/m4d.csproj
+++ b/m4d/m4d.csproj
@@ -1280,6 +1280,7 @@
     <Content Include="Views\PlayList\Details.cshtml" />
     <Content Include="Views\PlayList\Edit.cshtml" />
     <Content Include="Views\PlayList\Index.cshtml" />
+    <Content Include="Views\Dance\holidaydancemusic.cshtml" />
     <None Include="Web.m4d.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
