--- a/m4d/m4d.csproj
+++ b/m4d/m4d.csproj
@@ -1278,6 +1278,7 @@
     <Content Include="Views\PlayList\Edit.cshtml" />
     <Content Include="Views\PlayList\Index.cshtml" />
     <Content Include="Views\Dance\holidaydancemusic.cshtml" />
+    <Content Include="Views\Manage\DeleteUser.cshtml" />
     <None Include="Web.m4d.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
