New songs blog & links

--- a/m4d/m4d.csproj
+++ b/m4d/m4d.csproj
@@ -1280,6 +1280,7 @@
     <Content Include="Views\Dance\holidaydancemusic.cshtml" />
     <Content Include="Views\Manage\DeleteUser.cshtml" />
     <Content Include="Views\Song\NewMusic.cshtml" />
+    <Content Include="Views\Home\Index.cshtml" />
     <None Include="Web.m4d.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
