--- a/m4d/m4d.csproj
+++ b/m4d/m4d.csproj
@@ -725,6 +725,10 @@
     <Compile Include="Migrations\201708062232568_PlayLists.Designer.cs">
       <DependentUpon>201708062232568_PlayLists.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201809031743041_PremiumRole.cs" />
+    <Compile Include="Migrations\201809031743041_PremiumRole.Designer.cs">
+      <DependentUpon>201809031743041_PremiumRole.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Context\DanceMusicConfiguration.cs" />
     <Compile Include="Context\DanceMusicContext.cs" />
@@ -1383,6 +1387,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201708062232568_PlayLists.resx">
       <DependentUpon>201708062232568_PlayLists.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201809031743041_PremiumRole.resx">
+      <DependentUpon>201809031743041_PremiumRole.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
