Update EF & htmlagilitypack

--- a/m4d/Web.config
+++ b/m4d/Web.config
@@ -19,7 +19,7 @@ Sample binding in application.config for iisexpress
     
   <sectionGroup name="bundleTransformer">
 			<section name="core" type="BundleTransformer.Core.Configuration.CoreSettings, BundleTransformer.Core" />
-		<section name="less" type="BundleTransformer.Less.Configuration.LessSettings, BundleTransformer.Less" /><section name="microsoftAjax" type="BundleTransformer.MicrosoftAjax.Configuration.MicrosoftAjaxSettings, BundleTransformer.MicrosoftAjax" /></sectionGroup></configSections>
+		<section name="less" type="BundleTransformer.Less.Configuration.LessSettings, BundleTransformer.Less" /><section name="microsoftAjax" type="BundleTransformer.MicrosoftAjax.Configuration.MicrosoftAjaxSettings, BundleTransformer.MicrosoftAjax" /></sectionGroup><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-m4d-local.mdf;Initial Catalog=aspnet-m4d-local;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
