--- a/m4d/Web.config
+++ b/m4d/Web.config
@@ -17,9 +17,9 @@ Sample binding in application.config for iisexpress
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     
-  <sectionGroup name="bundleTransformer">
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><sectionGroup name="bundleTransformer">
 			<section name="core" type="BundleTransformer.Core.Configuration.CoreSettings, BundleTransformer.Core" />
-		<section name="less" type="BundleTransformer.Less.Configuration.LessSettings, BundleTransformer.Less" /><section name="microsoftAjax" type="BundleTransformer.MicrosoftAjax.Configuration.MicrosoftAjaxSettings, BundleTransformer.MicrosoftAjax" /></sectionGroup><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+		<section name="less" type="BundleTransformer.Less.Configuration.LessSettings, BundleTransformer.Less" /><section name="microsoftAjax" type="BundleTransformer.MicrosoftAjax.Configuration.MicrosoftAjaxSettings, BundleTransformer.MicrosoftAjax" /></sectionGroup></configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-m4d-local.mdf;Initial Catalog=aspnet-m4d-local;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
@@ -166,7 +166,7 @@ Sample binding in application.config for iisexpress
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="BundleTransformer.Core" publicKeyToken="973c344c93aac60d" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.9.171.0" newVersion="1.9.171.0" />
+        <bindingRedirect oldVersion="0.0.0.0-1.9.213.0" newVersion="1.9.213.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="JavaScriptEngineSwitcher.Core" publicKeyToken="c608b2a8cc9e4472" culture="neutral" />
