--- a/m4d/m4d.csproj
+++ b/m4d/m4d.csproj
@@ -68,6 +68,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Antlr.3.5.0.2\lib\Antlr3.Runtime.dll</HintPath>
     </Reference>
+    <Reference Include="AutoMapper, Version=7.0.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.7.0.1\lib\net45\AutoMapper.dll</HintPath>
+    </Reference>
     <Reference Include="BundleTransformer.Core, Version=1.9.171.0, Culture=neutral, PublicKeyToken=973c344c93aac60d, processorArchitecture=MSIL">
       <HintPath>..\packages\BundleTransformer.Core.1.9.171\lib\net40\BundleTransformer.Core.dll</HintPath>
       <Private>True</Private>
@@ -503,6 +506,9 @@
     </Reference>
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.ServiceModel.Channels" />
+    <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.ValueTuple.4.5.0\lib\netstandard1.0\System.ValueTuple.dll</HintPath>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -720,6 +726,10 @@
     <Compile Include="Migrations\201810090347569_SearchPlaylist.cs" />
     <Compile Include="Migrations\201810090347569_SearchPlaylist.Designer.cs">
       <DependentUpon>201810090347569_SearchPlaylist.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201810142326102_PlaylistDiscriminate.cs" />
+    <Compile Include="Migrations\201810142326102_PlaylistDiscriminate.Designer.cs">
+      <DependentUpon>201810142326102_PlaylistDiscriminate.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Context\DanceMusicConfiguration.cs" />
@@ -1388,6 +1398,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201810090347569_SearchPlaylist.resx">
       <DependentUpon>201810090347569_SearchPlaylist.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810142326102_PlaylistDiscriminate.resx">
+      <DependentUpon>201810142326102_PlaylistDiscriminate.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
