--- a/m4d/packages.config
+++ b/m4d/packages.config
@@ -3,6 +3,7 @@
   <package id="AjaxMin" version="5.14.5506.26202" targetFramework="net45" />
   <package id="AngleSharp" version="0.9.9" targetFramework="net46" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
+  <package id="AutoMapper" version="7.0.1" targetFramework="net46" />
   <package id="bootstrap" version="3.3.7" targetFramework="net46" />
   <package id="bootstrap.less" version="3.3.7" targetFramework="net46" />
   <package id="BundleTransformer.Core" version="1.9.171" targetFramework="net46" />
@@ -73,6 +74,7 @@
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net46" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net46" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.1" targetFramework="net46" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net46" />
   <package id="Twitter.Bootstrap" version="3.0.1.1" targetFramework="net45" />
   <package id="Twitter.Bootstrap.Less" version="3.3.6" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
