--- a/m4dModels/packages.config
+++ b/m4dModels/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="7.0.1" targetFramework="net46" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net46" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net46" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net46" />
@@ -8,4 +9,5 @@
   <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.10" targetFramework="net46" />
   <package id="Microsoft.Spatial" version="7.3.1" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net46" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net46" />
 </packages>
