--- a/m4d/packages.config
+++ b/m4d/packages.config
@@ -65,6 +65,7 @@
   <package id="Respond" version="1.4.2" targetFramework="net45" />
   <package id="Sendgrid" version="9.10.0" targetFramework="net46" />
   <package id="SgmlReader" version="1.8.11" targetFramework="net46" />
+  <package id="Stripe.net" version="21.7.0" targetFramework="net46" />
   <package id="System.Net.Http" version="4.3.3" targetFramework="net46" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net46" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net46" />
