--- a/m4d/m4d.csproj
+++ b/m4d/m4d.csproj
@@ -1260,6 +1260,7 @@
     <Content Include="Views\Home\Purchase.cshtml" />
     <Content Include="Views\Home\Contribute.cshtml" />
     <Content Include="Views\Home\ConfirmPurchase.cshtml" />
+    <Content Include="Views\Home\PurchaseError.cshtml" />
     <None Include="Web.m4d.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
