--- a/m4d/m4d.csproj
+++ b/m4d/m4d.csproj
@@ -770,6 +770,7 @@
     <Content Include="Content\chosen-sprite%402x.png" />
     <Content Include="Content\chosen-sprite.png" />
     <Content Include="Content\chosen.css" />
+    <Content Include="Content\contribute.png" />
     <Content Include="Content\dance-50.png" />
     <Content Include="Content\dance-broken-icon.png" />
     <Content Include="Content\dance-outline-icon.png" />
