--- a/m4d/packages.config
+++ b/m4d/packages.config
@@ -8,6 +8,7 @@
   <package id="BundleTransformer.Core" version="1.9.213" targetFramework="net46" />
   <package id="BundleTransformer.Less" version="1.9.205" targetFramework="net46" />
   <package id="BundleTransformer.MicrosoftAjax" version="1.9.213" targetFramework="net46" />
+  <package id="CaptchaMvc.Mvc5" version="1.5.0" targetFramework="net46" />
   <package id="CsQuery" version="1.3.4" targetFramework="net46" />
   <package id="dotNETSpotifyWebAPI" version="1.0.2" targetFramework="net45" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net46" />
