Finish off advanced search

--- a/m4d/m4d.csproj
+++ b/m4d/m4d.csproj
@@ -1267,6 +1267,7 @@
     <Content Include="Views\Home\ConfirmPurchase.cshtml" />
     <Content Include="Views\Home\PurchaseError.cshtml" />
     <Content Include="Views\Account\CheckEmail.cshtml" />
+    <Content Include="Views\Shared\RequiresPremium.cshtml" />
     <None Include="Web.m4d.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
