--- a/m4d/packages.config
+++ b/m4d/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AdvancedStringBuilder" version="0.1.0" targetFramework="net46" />
   <package id="AjaxMin" version="5.14.5506.26202" targetFramework="net45" />
   <package id="AngleSharp" version="0.9.9" targetFramework="net46" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
@@ -12,6 +13,7 @@
   <package id="CsQuery" version="1.3.4" targetFramework="net46" />
   <package id="dotNETSpotifyWebAPI" version="1.0.2" targetFramework="net45" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net46" />
+  <package id="evernote-cloud-sdk-windows" version="1.0.8" targetFramework="net46" />
   <package id="HtmlAgilityPack" version="1.8.9" targetFramework="net46" />
   <package id="JavaScriptEngineSwitcher.Core" version="2.4.10" targetFramework="net46" />
   <package id="JavaScriptEngineSwitcher.Msie" version="2.4.19" targetFramework="net46" />
@@ -40,29 +42,85 @@
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net46" developmentDependency="true" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net45" />
-  <package id="Microsoft.Owin" version="3.1.0" targetFramework="net46" />
-  <package id="Microsoft.Owin.Host.SystemWeb" version="3.1.0" targetFramework="net46" />
-  <package id="Microsoft.Owin.Security" version="3.1.0" targetFramework="net46" />
-  <package id="Microsoft.Owin.Security.Cookies" version="3.1.0" targetFramework="net46" />
-  <package id="Microsoft.Owin.Security.Facebook" version="3.1.0" targetFramework="net46" />
-  <package id="Microsoft.Owin.Security.Google" version="3.1.0" targetFramework="net46" />
-  <package id="Microsoft.Owin.Security.MicrosoftAccount" version="3.1.0" targetFramework="net46" />
-  <package id="Microsoft.Owin.Security.OAuth" version="3.1.0" targetFramework="net46" />
-  <package id="Microsoft.Owin.Security.Twitter" version="3.1.0" targetFramework="net46" />
+  <package id="Microsoft.Owin" version="4.0.1" targetFramework="net46" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.1" targetFramework="net46" />
+  <package id="Microsoft.Owin.Security" version="4.0.1" targetFramework="net46" />
+  <package id="Microsoft.Owin.Security.Cookies" version="4.0.1" targetFramework="net46" />
+  <package id="Microsoft.Owin.Security.Facebook" version="4.0.1" targetFramework="net46" />
+  <package id="Microsoft.Owin.Security.Google" version="4.0.1" targetFramework="net46" />
+  <package id="Microsoft.Owin.Security.MicrosoftAccount" version="4.0.1" targetFramework="net46" />
+  <package id="Microsoft.Owin.Security.OAuth" version="4.0.1" targetFramework="net46" />
+  <package id="Microsoft.Owin.Security.Twitter" version="4.0.1" targetFramework="net46" />
   <package id="Microsoft.Rest.ClientRuntime" version="2.3.10" targetFramework="net46" />
   <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.10" targetFramework="net46" />
   <package id="Microsoft.Spatial" version="7.3.1" targetFramework="net46" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
-  <package id="Microsoft.Web.WebJobs.Publish" version="1.1.0" targetFramework="net46" />
+  <package id="Microsoft.Web.WebJobs.Publish" version="2.0.0" targetFramework="net46" />
   <package id="Modernizr" version="2.8.3" targetFramework="net45" />
-  <package id="MsieJavaScriptEngine" version="2.2.9" targetFramework="net46" />
+  <package id="MsieJavaScriptEngine" version="3.0.1" targetFramework="net46" />
   <package id="MvcDiagnostics" version="5.2.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net45" />
-  <package id="Owin.Security.Providers" version="2.16.0" targetFramework="net46" />
-  <package id="Owin.Security.Providers.Spotify" version="2.16.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.ArcGISOnline" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.ArcGISPortal" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Asana" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Backlog" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Baidu" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.BattleNet" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Bitbucket" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Box" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Buffer" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Cosign" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.DeviantArt" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Discord" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.DoYouBuzz" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Dropbox" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.EVEOnline" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Evernote" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Fitbit" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Flickr" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Foursquare" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Geni" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.GitHub" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Gitter" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Google" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.GooglePlus" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.HealthGraph" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Imgur" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Instagram" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.LinkedIn" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.MyHeritage" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Onshape" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.OpenID" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.OpenIDBase" version="2.1.1" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Orcid" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.PayPal" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Podbean" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Reddit" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Salesforce" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Shopify" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.SlackProvider" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.SoundCloud" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Spotify" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.StackExchange" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Steam" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.TripIt" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Twitch" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Typeform" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Untappd" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Vimeo" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.VisualStudio" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.VKontakte" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Wargaming" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.WordPress" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.WSO2" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Xing" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Yahoo" version="2.26.0" targetFramework="net46" />
+  <package id="Owin.Security.Providers.Yammer" version="2.26.0" targetFramework="net46" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net45" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net45" />
+  <package id="PreMailer.Net" version="1.2.7" targetFramework="net46" />
   <package id="Respond" version="1.4.2" targetFramework="net45" />
   <package id="Sendgrid" version="9.10.0" targetFramework="net46" />
   <package id="SgmlReader" version="1.8.11" targetFramework="net46" />
