--- a/m4d/m4d.csproj
+++ b/m4d/m4d.csproj
@@ -1239,6 +1239,7 @@
     <Content Include="Views\Home\PurchaseError.cshtml" />
     <Content Include="Views\Account\CheckEmail.cshtml" />
     <Content Include="Views\Shared\RequiresPremium.cshtml" />
+    <Content Include="Views\Song\CreateSpotify.cshtml" />
     <None Include="Web.m4d.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
