--- a/m4d/packages.config
+++ b/m4d/packages.config
@@ -22,11 +22,20 @@
   <package id="Knockout.Mapping" version="2.4.0" targetFramework="net45" />
   <package id="knockoutjs" version="3.4.2" targetFramework="net46" />
   <package id="MarkdownDeep.Full" version="1.5" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights" version="2.9.1" targetFramework="net46" />
+  <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net46" />
+  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.8.1" targetFramework="net46" />
+  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.8.1" targetFramework="net46" />
+  <package id="Microsoft.ApplicationInsights.TraceListener" version="2.9.1" targetFramework="net46" />
+  <package id="Microsoft.ApplicationInsights.Web" version="2.8.1" targetFramework="net46" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.8.1" targetFramework="net46" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.8.1" targetFramework="net46" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net46" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net46" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net46" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.AspNet.TelemetryCorrelation" version="1.0.4" targetFramework="net46" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.6" targetFramework="net46" />
@@ -125,6 +134,7 @@
   <package id="Sendgrid" version="9.10.0" targetFramework="net46" />
   <package id="SgmlReader" version="1.8.11" targetFramework="net46" />
   <package id="Stripe.net" version="21.7.0" targetFramework="net46" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.5.0" targetFramework="net46" />
   <package id="System.Net.Http" version="4.3.3" targetFramework="net46" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net46" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net46" />
