--- a/m4dModels.Tests/m4dModels.Tests.csproj
+++ b/m4dModels.Tests/m4dModels.Tests.csproj
@@ -137,26 +137,26 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
-    <Content Include="TestData\dancestatistics.txt">
+    <EmbeddedResource Include="TestData\dancestatistics.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="TestData\test-dances.txt">
+    <EmbeddedResource Include="TestData\test-dances.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="TestData\test-searches.txt">
+    </EmbeddedResource>
+    <EmbeddedResource Include="TestData\test-searches.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="TestData\test-songs.txt">
+    </EmbeddedResource>
+    <EmbeddedResource Include="TestData\test-songs.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="TestData\test-tags.txt">
+    </EmbeddedResource>
+    <EmbeddedResource Include="TestData\test-tags.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="TestData\test-users.txt">
+    </EmbeddedResource>
+    <EmbeddedResource Include="TestData\test-users.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
+    </EmbeddedResource>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
