--- a/m4d/packages.config
+++ b/m4d/packages.config
@@ -41,7 +41,10 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net46" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net46" />
-  <package id="Microsoft.Azure.Search" version="3.0.4" targetFramework="net46" />
+  <package id="Microsoft.Azure.Search" version="5.0.3" targetFramework="net46" />
+  <package id="Microsoft.Azure.Search.Common" version="5.0.3" targetFramework="net46" />
+  <package id="Microsoft.Azure.Search.Data" version="5.0.3" targetFramework="net46" />
+  <package id="Microsoft.Azure.Search.Service" version="5.0.3" targetFramework="net46" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net45" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net45" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net45" />
@@ -59,8 +62,8 @@
   <package id="Microsoft.Owin.Security.MicrosoftAccount" version="4.0.1" targetFramework="net46" />
   <package id="Microsoft.Owin.Security.OAuth" version="4.0.1" targetFramework="net46" />
   <package id="Microsoft.Owin.Security.Twitter" version="4.0.1" targetFramework="net46" />
-  <package id="Microsoft.Rest.ClientRuntime" version="2.3.10" targetFramework="net46" />
-  <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.10" targetFramework="net46" />
+  <package id="Microsoft.Rest.ClientRuntime" version="2.3.17" targetFramework="net46" />
+  <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.18" targetFramework="net46" />
   <package id="Microsoft.Spatial" version="7.3.1" targetFramework="net46" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Microsoft.Web.WebJobs.Publish" version="2.0.0" targetFramework="net46" />
