--- a/m4dModels.Tests/packages.config
+++ b/m4dModels.Tests/packages.config
@@ -3,9 +3,12 @@
   <package id="EntityFramework" version="6.2.0" targetFramework="net46" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.2" targetFramework="net46" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.2" targetFramework="net46" />
-  <package id="Microsoft.Azure.Search" version="3.0.4" targetFramework="net46" />
-  <package id="Microsoft.Rest.ClientRuntime" version="2.3.10" targetFramework="net46" />
-  <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.10" targetFramework="net46" />
+  <package id="Microsoft.Azure.Search" version="5.0.3" targetFramework="net46" />
+  <package id="Microsoft.Azure.Search.Common" version="5.0.3" targetFramework="net46" />
+  <package id="Microsoft.Azure.Search.Data" version="5.0.3" targetFramework="net46" />
+  <package id="Microsoft.Azure.Search.Service" version="5.0.3" targetFramework="net46" />
+  <package id="Microsoft.Rest.ClientRuntime" version="2.3.17" targetFramework="net46" />
+  <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.18" targetFramework="net46" />
   <package id="Microsoft.Spatial" version="7.3.1" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net46" />
 </packages>
