--- a/m4d/Web.config
+++ b/m4d/Web.config
@@ -78,11 +78,7 @@ Sample binding in application.config for iisexpress
       <mimeMap fileExtension=".ttf" mimeType="application/octet-stream" />
     </staticContent>
     <handlers>
-      
-      
-      
-      
-      
+                              
     <add name="LessAssetHandler" path="*.less" verb="GET" type="BundleTransformer.Less.HttpHandlers.LessAssetHandler, BundleTransformer.Less" resourceType="File" preCondition="" /><remove name="ExtensionlessUrlHandler-Integrated-4.0" /><remove name="OPTIONSVerbHandler" /><remove name="TRACEVerbHandler" /><add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" /></handlers>
     <validation validateIntegratedModeConfiguration="false" />
     <rewrite>
@@ -112,6 +108,14 @@ Sample binding in application.config for iisexpress
             <add input="{HTTPS}" pattern="OFF" />
           </conditions>
           <action type="Redirect" url="https://{HTTP_HOST}{HTTP_URL}" redirectType="Permanent" appendQueryString="false" />
+        </rule>
+        <rule name="WWW Rewrite" enabled="true">
+          <match url="(.*)" />
+          <conditions>
+            <add input="{HTTP_HOST}" negate="true" pattern="^www\.music4dance\.net$" />
+            <add input="{HTTP_HOST}" pattern="localhost" negate="true" />
+          </conditions>
+          <action type="Redirect" url="https://www.{HTTP_HOST}/{R:0}" redirectType="Permanent" appendQueryString="true"/>
         </rule>
       </rules>
     </rewrite>
