redirect to new blog sit

--- a/m4d/Web.config
+++ b/m4d/Web.config
@@ -83,12 +83,20 @@ Sample binding in application.config for iisexpress
     <validation validateIntegratedModeConfiguration="false" />
     <rewrite>
       <rules>
+
         <rule name="Convert to lower case" stopProcessing="true">
           <match url=".*[A-Z].*" ignoreCase="false" />
           <conditions>
             <add input="{REQUEST_URI}" negate="true" pattern="/api/" />
           </conditions>
           <action type="Redirect" url="{ToLower:{R:0}}" redirectType="Permanent" />
+        </rule>
+        <rule name="Blog Redirect" stopProcessing="true">
+          <match url=".*" />
+          <conditions logicalGrouping="MatchAny">
+            <add input="{HTTP_HOST}{REQUEST_URI}" pattern="(.*)/blog(.*)" />
+          </conditions>
+          <action type="Redirect" appendQueryString="true" url="https://dance4.music.blog{C:2}" redirectType="Permanent" />
         </rule>
         <!--<rule name="Remove trailing slash" stopProcessing="true">
           <match url="(.*)/$" />
