Update to new blog

--- a/m4d/Web.config
+++ b/m4d/Web.config
@@ -94,9 +94,16 @@ Sample binding in application.config for iisexpress
         <rule name="Blog Redirect" stopProcessing="true">
           <match url=".*" />
           <conditions logicalGrouping="MatchAny">
-            <add input="{HTTP_HOST}{REQUEST_URI}" pattern="(.*)/blog(.*)" />
+            <add input="{HTTP_HOST}{REQUEST_URI}" pattern="(.*)/blog/(.*)" />
           </conditions>
-          <action type="Redirect" appendQueryString="true" url="https://dance4.music.blog{C:2}" redirectType="Permanent" />
+          <action type="Redirect" appendQueryString="true" url="https://music4dance.blog/{C:2}" redirectType="Permanent" />
+        </rule>
+        <rule name="Blog Root Redirect" stopProcessing="true">
+          <match url=".*" />
+          <conditions logicalGrouping="MatchAny">
+            <add input="{HTTP_HOST}{REQUEST_URI}" pattern="(.*)/blog/?$" />
+          </conditions>
+          <action type="Redirect" appendQueryString="true" url="https://music4dance.blog" redirectType="Permanent" />
         </rule>
         <!--<rule name="Remove trailing slash" stopProcessing="true">
           <match url="(.*)/$" />
