Create a voting index

--- a/m4d/m4d.csproj
+++ b/m4d/m4d.csproj
@@ -1264,6 +1264,7 @@
     <Content Include="Views\Account\CheckEmail.cshtml" />
     <Content Include="Views\Shared\RequiresPremium.cshtml" />
     <Content Include="Views\Song\CreateSpotify.cshtml" />
+    <Content Include="Views\ApplicationUsers\VotingResults.cshtml" />
     <None Include="Web.m4d.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
