--- a/m4dModels/m4dModels.csproj
+++ b/m4dModels/m4dModels.csproj
@@ -186,6 +186,7 @@
     <Compile Include="UndoAction.cs" />
     <Compile Include="UserQuery.cs" />
     <Compile Include="UserTag.cs" />
+    <Compile Include="VotingRecord.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
