Fix bugs in bug report
Signed-off-by: David W. Gray <dwgray67@hotmail.com>

--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -1,8 +1,7 @@
 name: Bug report
-about: Create a bug report to help us improve
+description: Create a bug report to help us improve
 title: 'Website Issue'
 labels: [bug]
-assignees: ''
 body:
   - type: markdown
     attributes:
